fix(css): fix svg blowing up issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -122,8 +122,6 @@ a:focus-visible .nav-text {
 
 svg {
     fill: #91A1B8;
-    width: 100%;
-    height: 100%;
     vertical-align: middle;
     transition: fill 0.3s ease;
     min-width: 32px;
